cambio propiedades en dev

--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando ambiente de Desarrollo remout.
-configuracion.autor.nombre = Luis Miguelo Castillo.
-configuracion.autor.email = mikchMiguelh@gmail.com
+configuracion.texto=Configurando ambiente de Desarrollo (dev).
+configuracion.autor.nombre = Luis Miguelo Castillo Hernandez
+configuracion.autor.email = mikchMiguelhdez@gmail.com
