modificando file config

--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando ambiente de Desarrollo (dev).
-configuracion.autor.nombre = Luis Miguelo Castillo Hernandez
-configuracion.autor.email = mikchMiguelhdez@gmail.com
+configuracion.texto=Configurando ambiente de Desarrollo.
+configuracion.autor.nombre = MIGUE CASTILLO
+configuracion.autor.email = CASTILLO0303@gmail.com
