--- a/servicio-items-restemplate-dev.properties
+++ b/servicio-items-restemplate-dev.properties
@@ -1,3 +1,4 @@
+server.port=8006
 configuracion.texto=Configurando ambiente de Desarrollo.
 configuracion.autor.nombre = MIGUE CASTILLO
 configuracion.autor.email = CASTILLO0303@gmail.com
