--- a/servicio-usuarios-dev.properties
+++ b/servicio-usuarios-dev.properties
@@ -6,3 +6,4 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.hibernate.ddl-auto=create
 logging.level.org.hibernate=debug
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
